<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_update_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.UpdateProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/profile_update_toolbar"
            layout="@layout/toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_update_dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/dp_placeholder" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/personal_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_update_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/esp_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_face"
                        android:drawableLeft="@drawable/ic_face"
                        android:drawablePadding="16dp"
                        android:hint="@string/first_name_hint"
                        android:inputType="textPersonName"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_update_family_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_face"
                        android:drawableLeft="@drawable/ic_face"
                        android:drawablePadding="16dp"
                        android:hint="@string/family_name_hint"
                        android:inputType="textPersonName"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_update_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_email_black"
                        android:drawableLeft="@drawable/ic_email_black"
                        android:drawablePadding="16dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_update_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="15">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_profile"
                        android:drawableLeft="@drawable/ic_profile"
                        android:drawablePadding="16dp"
                        android:hint="@string/username_hint"
                        android:inputType="text"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorInfo"
                    android:elevation="10dp"
                    android:onClick="updateProfile"
                    android:text="@string/btn_done"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

                <ProgressBar
                    android:id="@+id/update_details_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:theme="@style/ProgressBar.Teal"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="10dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/change_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue_grey_900">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/esp_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black"
                        android:drawableLeft="@drawable/ic_lock_black"
                        android:drawablePadding="16dp"
                        android:hint="@string/old_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:theme="@style/EditText.BlueGrey900.Hint"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/blue_grey_900">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/esp_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black"
                        android:drawableLeft="@drawable/ic_lock_black"
                        android:drawablePadding="16dp"
                        android:hint="@string/new_password_hint"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:theme="@style/EditText.BlueGrey900" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/colorPurple"
                    android:elevation="10dp"
                    android:onClick="changePassword"
                    android:text="@string/btn_change_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp" />

                <ProgressBar
                    android:id="@+id/change_password_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="8dp"
                    android:theme="@style/ProgressBar.Teal"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>