<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.raju.tripplanner.activities.ViewTripActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white"
        android:title="@string/edit_trip"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_Trip"
        app:showAsAction="ifRoom" />
</menu>