...
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/esp_trip_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_location"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="16dp"
                    android:hint="@string/trip_title"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/btn_update_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
...
